--- a/CSS_Designs/WebContent/css/Styles.css
+++ b/CSS_Designs/WebContent/css/Styles.css
@@ -1,24 +1,29 @@
-.animated{
+.head{
 	text-align: center;
-	animation-name: bounce;
+}
+.css3-notification {
+    font-size: .8em;
+    text-align: center;
+    padding: 10px;
+    background-color: #111;
+    color: #fff;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, .3);
+    text-transform: uppercase;
+    position: relative;
+    font-weight: bold;
 }
 @keyframes bounce {
-  from, 20%, 53%, 80%, to {
-    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    transform: translate3d(0,0,0);
-  }
-
-  40%, 43% {
-    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    transform: translate3d(0, -30px, 0);
-  }
-
-  70% {
-    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    transform: translate3d(0, -15px, 0);
-  }
-
-  90% {
-    transform: translate3d(0,-4px,0);
-  }
+    0% {
+		-webkit-transform:translateY(-100%);
+		opacity: 0;
+	}
+	5% {
+  		-webkit-transform:translateY(-100%);
+    	opacity: 0;
+	}
+	15% {
+    -webkit-transform: translateY(0);
+    padding-bottom: 5px;
+	}
+	
 }
